CriptoOrg/CriptoOrg/force-app/main/default/objects/Mercado__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Verifica se o mercado está ativo para novas ordems.</description>
    <inlineHelpText>Verifica se o mercado está ativo para novas ordems.</inlineHelpText>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>