CriptoOrg/CriptoOrg/force-app/main/default/objects/Mercado__c/fields/ContinuousName__c.field-meta.xml
<CustomField>
    <fullName>ContinuousName__c</fullName>
    <formula>MoedaPrimaria__c +  MoedaSecundaria__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContinuousName</label>
    <type>Text</type>
</CustomField>