CriptoOrg/CriptoOrg/force-app/main/default/objects/Mercado__c/fields/Preco_Medio__c.field-meta.xml
<CustomField>
    <fullName>Preco_Medio__c</fullName>
    <formula>(Total_Comprado__c -  Total_Vendido__c) /  Quantidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Médio</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>