CriptoOrg/CriptoOrg/force-app/main/default/objects/Mercado__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <formula>Total_Investido__c -  (Total_Comprado__c -  Total_Vendido__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>