CriptoOrg/CriptoOrg/force-app/main/default/objects/Mercado__c/fields/Total_Comprado__c.field-meta.xml
<CustomField>
    <fullName>Total_Comprado__c</fullName>
    <description>Total Comprado das Ordens executadas.</description>
    <inlineHelpText>Total Comprado das Ordens executadas.</inlineHelpText>
    <label>Total Comprado</label>
    <summarizedField>Ordem__c.Total__c</summarizedField>
    <summaryFilterItems>
        <field>Ordem__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Compra</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Ordem__c.Status__c</field>
        <operation>equals</operation>
        <value>Executada</value>
    </summaryFilterItems>
    <summaryForeignKey>Ordem__c.Mercado__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>