CriptoOrg/CriptoOrg/force-app/main/default/objects/Mercado__c/fields/Total_Investido__c.field-meta.xml
<CustomField>
    <fullName>Total_Investido__c</fullName>
    <formula>CotacaoAtual__c *  Quantidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Investido</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>