CriptoOrg/CriptoOrg/force-app/main/default/objects/Mercado__c/fields/Total_Vendido__c.field-meta.xml
<CustomField>
    <fullName>Total_Vendido__c</fullName>
    <description>Total vendido de todas as transações.</description>
    <inlineHelpText>Total vendido de todas as transações.</inlineHelpText>
    <label>Total Vendido</label>
    <summarizedField>Ordem__c.Total__c</summarizedField>
    <summaryFilterItems>
        <field>Ordem__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Venda</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Ordem__c.Status__c</field>
        <operation>equals</operation>
        <value>Executada</value>
    </summaryFilterItems>
    <summaryForeignKey>Ordem__c.Mercado__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>